# oak_detection_utils

./: CMakeLists.txt  README.md  package.xml  ros.repos  ros_ws.repos  setup_workspace.sh
config/: oak_d_lite.yaml
config/nn/: nut_finder.json  nut_seated.json  qr_code.json  qr_code_v3.json  studs_and_nuts.json  studs_from_top.json  yolov8n-nut-640.json  yolov8n-nut_seated-640.json  yolov8n-qr-640.json  yolov8n-qr_code-640.json  yolov8n_nut.json
include/oak_detection_utils/: detection_bridge_node.hpp  detection_capture_node.hpp  detection_overlay_node.hpp
launch/: oak_yolo.launch.py  oak_yolo_multi.launch.py
oak_detection_utils/: nn_archive.py
src/: detection_bridge_node.cpp  detection_capture_node.cpp  detection_overlay_node.cpp
