<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oak_detection_utils</name>
  <version>0.1.0</version>
  <description>Bridge and overlay nodes for depthai_ros_driver detections</description>
  <maintainer email="jlp@todo.todo">jlp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Tier 1: System -->
  <depend>libopencv-dev</depend>

  <!-- Tier 2: ROS -->
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>vision_msgs</depend>

  <!-- Tier 3: Custom/JLP -->
  <depend>depthai_yolo_msgs</depend>

  <exec_depend>depthai_ros_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
